# user-api

./: .aicoe-ci.yaml  .coafile  .env.template  .gitignore  .pre-commit-config.yaml  .prow.yaml  .thoth.yaml  .travis.yml  .yamllint  .zuul.yaml  CHANGELOG.md  Jenkinsfile  OWNERS  Pipfile  README.rst  devops_push_image.yaml  devops_redeploy.yaml  gunicorn.conf.py  pyproject.toml  requirements.txt  run_codegen.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  kebechet_update.md
.s2i/: environment
openapi/: openapi.yaml
openshift/: buildConfig-template.yaml  deployment-template.yaml  imageStream-template.yaml
protobuf_spec/thoth/user_api/: user_api.proto
thoth/user_api/: __init__.py  api_v1.py  configuration.py  entrypoint.py  exceptions.py  grpc_server.py  image.py  metrics.py  openapi_server.py  payload_filter.py  swagger.yaml  user_api_pb2.py  user_api_pb2_grpc.py
thoth/user_api/parsing/: __init__.py
thoth/user_api/parsing/handlers/: __init__.py  base.py  dnf.py  pip.py  pip3.py  yum.py
thoth_user_api/: __init__.py  api_v1.py  configuration.py  entrypoint.py  exceptions.py  image.py  swagger.yaml  utils.py
thoth_user_api/parsing/: __init__.py
thoth_user_api/parsing/handlers/: __init__.py  base.py  dnf.py  pip.py  pip3.py  yum.py
